Remove min-height from body to prevent unnecessary scrollbar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,7 +38,6 @@ body {
     flex-direction: column;
     overflow-x: hidden;
     overflow-y: auto;
-    min-height: 100vh;
 }
 
 a {
